--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "typescript": "^4.6.5",
     "unbuild": "^0.7.4",
     "vite": "^2.9.12",
-    "vitest": "^0.15.1"
+    "vitest": "^0.15.1",
+    "vue": "^3.2.37"
   },
   "dependencies": {
     "ts-node": "10.6.0"
