--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "vitest.enable": true,
     "vitest.commandLine": "npm run test",
-    "vitest.showFailMessages": true
+    "vitest.showFailMessages": true,
+    "testing.automaticallyOpenPeekView": "never"
 }
